Working on mobile oversizing issue

--- a/app/assets/stylesheets/_utilities.css.scss
+++ b/app/assets/stylesheets/_utilities.css.scss
@@ -22,5 +22,6 @@ html {
 }
 
 body {
+  max-width: 100vw;
   background-color: #FFFFFF;
 }
